--- a/src/client/assets/scss/pages/home-12.scss
+++ b/src/client/assets/scss/pages/home-12.scss
@@ -512,7 +512,7 @@ ul {
 .medical-emergency-booking {
     position: $__relative;
     z-index: 1;
-    margin-top: 80px;
+    // margin-top: 80px;  thilak-commented
     border-radius: 20px;
     @include respond-below(custom991) {
         margin-top: 60px;
