--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -2247,3 +2247,18 @@
         }
     }
 }
+
+
+// thilak css
+
+.per-apr{
+    border-radius: 20px !important;
+}
+
+.discover-you-main{
+    // border: 2px solid grey;
+    box-shadow: 0px 0px 10px lightgray;
+    margin: 15px 0px;
+    padding: 15px 0px;
+    border-radius: 15px;
+}
