--- a/src/client/assets/scss/pages/home-12.scss
+++ b/src/client/assets/scss/pages/home-12.scss
@@ -68,6 +68,12 @@ ul {
             font-weight: $__medium;
         }
     }
+
+    .per-apr{
+        
+    }
+
+
     .input-box-twelve {
         background: $__white;
         border-radius: 10px;
