last change in code
last change in code

--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -2262,3 +2262,30 @@
     padding: 15px 0px;
     border-radius: 15px;
 }
+
+// thilak changes
+
+
+.medical-emergency-booking .medical-emergency-card {
+    background: #0e5281 !important;
+}
+
+.medical-emergency-booking .slider-content h3{
+    color: white !important;
+}
+
+.medical-emergency-booking .slider-content span {
+    color: white !important;
+
+}
+
+
+.medical-emergency-booking .slider-content p {
+    color: white !important;
+
+}
+
+.medical-emergency-booking .slider-content a {
+    background: #84c22f !important;
+
+}
