--- a/src/client/assets/scss/layout/footer-5.scss
+++ b/src/client/assets/scss/layout/footer-5.scss
@@ -31,8 +31,10 @@
                 }
                 @include respond-below (custom767) {
                     padding: 30px 0 0;
+                }&{
+                    background: $__blue__17;
                 }
-                background: $__blue__17;
+                
                 .footer-widget {
                     .footer-title {
                         padding-bottom: 15px;
