--- a/src/client/assets/scss/pages/home-12.scss
+++ b/src/client/assets/scss/pages/home-12.scss
@@ -1788,8 +1788,10 @@ ul {
                     background: $__blue__dark;
                     color: $__white;
                 }
+            }&{
+                margin-right: 15px;
             }
-            margin-right: 15px;
+            
             @include respond-below(custom767) {
                 margin-right: 10px;
             }
