--- a/src/client/assets/scss/pages/home-11.scss
+++ b/src/client/assets/scss/pages/home-11.scss
@@ -57,8 +57,10 @@
         @include margin-padding(null, 80px 0);
         @include respond-below(custom991) {
             @include margin-padding(null, 50px 0);
+        }&{
+            z-index: 1;
         }
-        z-index: 1;
+        
         span {
             font-size: $__font__size__14;
             color: $__blue__14;
