--- a/src/client/assets/scss/pages/home-8.scss
+++ b/src/client/assets/scss/pages/home-8.scss
@@ -577,8 +577,8 @@
                             border: 0;
                             @include transition(0.5s);
                             &:hover {                    
-                                box-shadow: inset 210px 0 0 0  darken($__blue__14, 6%);
-                                border-color: darken($__blue__14, 6%);
+                                box-shadow: inset 210px 0 0 0  adjust-color($__blue__14, $lightness: -6%);
+                                border-color: adjust-color($__blue__14, $lightness: -6%);
                                 color: $__white;
                                 @include transition(0.5s);
                             }
