--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -2890,6 +2890,11 @@
 }
 
 .expertise-360:hover {
-    @include transform(rotateY(360deg));
-    @include transition(0.6s);
+            color: $__white;
+            border-color: $__blue__14;
+            background: $__blue__14;
+            box-shadow: inset 0 0 0 50px $__blue__14;
+            @include transform(rotateY(360deg));
+                        @include transition(1s);
+            
 }
