--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -2772,25 +2772,47 @@
 
         .row {
             .col-lg-5 {
-                background-color: white;
-                padding: 3rem;
-                border-radius: 50%;
-                border: 5px solid #28a745; // Bootstrap success color
+
                 text-align: center;
                 margin-top: 3rem;
 
-                .banner-content {
-                    h1 {
-                        font-size: 2.5rem;
-                    }
+                .banner-cont-main {
 
-                    p {
-                        font-size: 1rem;
-                        margin-bottom: 1rem;
-                    }
+                    background-color: rgba(255, 255, 255);
+                    backdrop-filter: blur(25px);
+                    padding: 3rem;
+                    border-radius: 50%;
+                    border: 6px solid #28a745; // Bootstrap success color
+                    text-align: center;
+                    width: 500px;
+                    height: 500px;
+                    display: flex;
+                    align-items: center;
 
-                    .fs-6 {
-                        font-size: 0.875rem;
+
+                    .banner-content {
+                        h1 {
+                            font-size: 35px;
+                            font-weight: 700;
+                            text-transform: uppercase;
+                            color: rgb(23, 69, 121);
+                        }
+
+                        p {
+                            font-size: 1rem;
+                            margin-bottom: 1rem;
+                            font-weight: 400 !important;
+                            color: rgb(23, 69, 121);
+                        }
+
+                        .fs-6 {
+                            font-size: 0.875rem;
+                            color: rgb(23, 69, 121);
+                        }
+                        .discov-innner{
+                            font-size: 13px;
+                            font-weight: 700;
+                        }
                     }
                 }
             }
@@ -2855,7 +2877,7 @@
 }
 
 .gut-health {
-    background-color: #fff ;
+    background-color: #fff;
     border: solid 5px #65bd60;
     border-radius: 150px !important;
     padding: 12px;
@@ -2921,35 +2943,35 @@
     margin-top: 30px;
 }
 
-.mor-info .specialist-card img{
+.mor-info .specialist-card img {
     width: 30px;
 }
 
-.mor-info h6{
-    color :white !important;
+.mor-info h6 {
+    color: white !important;
     padding-left: 10px !important;
     margin-top: 5px !important;
 
 }
 
-.mor-info .specialist-nav a{
-    color :white !important;
+.mor-info .specialist-nav a {
+    color: white !important;
 }
 
-.re-ser-card{
+.re-ser-card {
     border: 1px solid grey;
     padding: 10px;
     border-radius: 10px;
     margin-top: 20px;
 }
 
-.re-ser-hed{
+.re-ser-hed {
     font-size: 20px;
     color: #174579;
     font-weight: 600;
 }
 
-.re-ser-cont{
+.re-ser-cont {
     font-size: 14px;
     color: #595c69;
     letter-spacing: 0;
@@ -2962,10 +2984,10 @@
 }
 
 .expertise-360:hover {
-            color: $__white;
-            border-color: $__blue__14;
-            background: $__blue__14;
-            box-shadow: inset 0 0 0 50px $__blue__14;
-            @include transform(rotateY(360deg));
-                        @include transition(1s);
+    color: $__white;
+    border-color: $__blue__14;
+    background: $__blue__14;
+    box-shadow: inset 0 0 0 50px $__blue__14;
+    @include transform(rotateY(360deg));
+    @include transition(1s);
 }
