--- a/src/client/assets/scss/layout/footer-1.scss
+++ b/src/client/assets/scss/layout/footer-1.scss
@@ -12,6 +12,9 @@
         .footer-widget {
             .footer-logo {
                 margin-bottom: 20px;
+                img {
+                     max-width: 160px;
+                }
             }
             .footer-about-content {
                 max-width: 272px;
