--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -2751,9 +2751,39 @@
 .banner-section {
     padding: 0;
     position: relative;
+    padding-top: 5%;
 
     .col-md-12 {
         position: relative;
+
+        .banner-abs {
+            position: absolute;
+            top: 0%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            background: rgba(23, 69, 121, .5);
+            padding: 1% 5%;
+            align-items: center;
+
+            .banner-posab-h {
+                font-size: 30px;
+                color: white;
+            }
+
+            .form-control {
+                border-radius: 25px !important;
+            }
+
+            .btn {
+                border-radius: 0 25px 25px 0;
+                background-color: #65bd60;
+                border: 1px solid #65bd60;
+            }
+
+        }
+
+
 
         .slider-img {
             video {
@@ -2762,6 +2792,10 @@
             }
         }
     }
+
+
+
+
 
     .container {
         position: absolute;
@@ -2809,7 +2843,8 @@
                             font-size: 0.875rem;
                             color: rgb(23, 69, 121);
                         }
-                        .discov-innner{
+
+                        .discov-innner {
                             font-size: 13px;
                             font-weight: 700;
                         }
@@ -2889,8 +2924,8 @@
 
 .gut-health .main-reviewimages img {
     border-radius: 50% !important;
-    box-shadow: 0px 0px 10px grey;
-    padding: 4%;
+    // box-shadow: 0px 0px 10px grey;
+    // padding: 4%;
 }
 
 .bg-trans {
@@ -2990,4 +3025,57 @@
     box-shadow: inset 0 0 0 50px $__blue__14;
     @include transform(rotateY(360deg));
     @include transition(1s);
+}
+
+
+
+.banner-sub {
+
+    .container-fluid {
+        padding: 0px !important;
+
+        .svtm {
+            background-color: #174579;
+
+
+            .ban-sub-hed {
+                font-size: 28px;
+                font-weight: 700;
+                line-height: 33px;
+                color: white;
+            }
+
+            .ban-sub-cont {
+                color: #fff;
+                line-height: 24px;
+            }
+
+            img{
+                width: 200px;
+                display: block;
+                margin: auto;
+            }
+            .read-more-test {
+                font-size: 17px;
+                color: #fff;
+                letter-spacing: 0;
+                text-align: center;
+                border-radius: 18px;
+                font-weight: 500;
+                height: 36px;
+                // line-height: 1.2;
+                padding-top: 7px;
+                padding-bottom: 7px;
+                background-color: #65bd60;
+                border-radius: 30px;
+                padding: 2% 5%;
+            }
+
+        }
+    }
+
+    .bg-wh-b{
+        background-color: #80a1bc !important;
+    }
+
 }
