--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3154,3 +3154,22 @@
     }
 
 }
+
+.t-pre{
+    font-size: 15px;
+    background-color: white !important;
+    border: none;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    box-shadow: 0px 0px 10px lightblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+}
+
+.nav-btn{
+    bottom: 0% !important;
+}
