--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3173,3 +3173,49 @@
 .nav-btn{
     bottom: 0% !important;
 }
+
+.con-arw{
+    font-size: 25px;
+    color: #66be6c;
+}
+
+.gth-sub-hed{
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    color: #65bd60;
+    letter-spacing: 1px;
+}
+
+.gth-hed{
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 36px;
+    color: #174579;
+    margin-top: 0;
+    font-size: 28px;
+    color: #174579;
+    letter-spacing: 0;
+    line-height: 38px;
+    margin-bottom: 6px;
+}
+
+.gth-img{
+    width: 250px;
+}
+
+.gth-cont{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    margin-bottom: 8px;
+    color: #595c69;
+}
+
+.mnim-bg{
+    background-color: #edf2f6;
+}
+
+header{
+    box-shadow: 0px 0px 10px lightgray !important;
+}
