--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3219,3 +3219,19 @@
 header{
     box-shadow: 0px 0px 10px lightgray !important;
 }
+
+.txt-just{
+    text-align: justify !important;
+}
+
+.lsre-tret ul li{
+    list-style:disc;
+}
+
+.img-apoin{
+    width: 30px;
+}
+
+.obesity-pag ul li{
+    list-style:disc;
+}
