--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3155,7 +3155,7 @@
 
 }
 
-.t-pre{
+.t-pre {
     font-size: 15px;
     background-color: white !important;
     border: none;
@@ -3167,19 +3167,19 @@
     justify-content: center;
     align-items: center;
 
-    
+
 }
 
-.nav-btn{
+.nav-btn {
     bottom: 0% !important;
 }
 
-.con-arw{
+.con-arw {
     font-size: 25px;
     color: #66be6c;
 }
 
-.gth-sub-hed{
+.gth-sub-hed {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 20px;
@@ -3187,7 +3187,7 @@
     letter-spacing: 1px;
 }
 
-.gth-hed{
+.gth-hed {
     font-weight: 700;
     font-size: 35px;
     line-height: 36px;
@@ -3200,11 +3200,11 @@
     margin-bottom: 6px;
 }
 
-.gth-img{
+.gth-img {
     width: 250px;
 }
 
-.gth-cont{
+.gth-cont {
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
@@ -3212,53 +3212,90 @@
     color: #595c69;
 }
 
-.mnim-bg{
+.mnim-bg {
     background-color: #edf2f6;
 }
 
-header{
+header {
     box-shadow: 0px 0px 10px lightgray !important;
 }
 
-.txt-just{
+.txt-just {
     text-align: justify !important;
 }
 
-.lsre-tret ul li{
-    list-style:disc;
+.lsre-tret ul li {
+    list-style: disc;
 }
 
-.img-apoin{
+.img-apoin {
     width: 30px;
 }
 
-.obesity-pag ul li{
-    list-style:disc;
+.obesity-pag ul li {
+    list-style: disc;
 }
 
-.cal-btnn{
+.cal-btnn {
     width: 35%;
 }
 
 .splash-screen {
     width: 100vw;
-      height: 100vh;
-      background-color: black;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-  
+    height: 100vh;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     .logo-container {
-      .logo-image {
-        width: 100%; // Adjust the logo size as needed
-      }
+        .logo-image {
+            width: 100%; // Adjust the logo size as needed
+        }
     }
-  }
-  
-  @keyframes fadeOut {
+}
+
+@keyframes fadeOut {
     to {
-      opacity: 0;
-      visibility: hidden;
+        opacity: 0;
+        visibility: hidden;
     }
-  }
-  
+}
+
+@media only screen and (max-width:991.98px) {
+    #gut-health .owl-carousel .owl-item img {
+        width: 250px !important;
+        height: 250px !important;
+        margin: auto !important;
+    }
+
+    #gut-health .owl-carousel .owl-item {
+        width: 260px !important;
+        display: block !important;
+        margin: auto !important;
+    }
+
+
+    .header .header-nav .navbar-header {
+        display: flex;
+        justify-content: space-between;
+
+        .mobile_btn{
+            width: 50% !important;
+            display: block !important;
+          
+        }
+
+        #mobile_btn {
+            position: relative !important;
+        }
+
+        .navbar-brand {
+            width: 50% !important;
+            text-align: end !important;
+        }
+    }
+
+    
+
+}
