--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3267,7 +3267,7 @@ header {
     height: 70px !important;
   }
   .ovr-flw{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
   .next-slide{
     right: -10px;
