--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3275,6 +3275,10 @@ header {
   .slick-next {
     right: -10px !important;
   }
+  .txt-fon{
+    font-size: smaller;
+  }
+ 
 //   .banner-section .container .row .col-lg-5 .banner-cont-main {
 //     background-color: rgb(255, 255, 255);
 //     backdrop-filter: blur(25px);
