last change in code
last change in code

--- a/src/client/assets/scss/pages/home.scss
+++ b/src/client/assets/scss/pages/home.scss
@@ -3331,3 +3331,61 @@ header {
     width: 75%;
     height:  75%;
 }
+
+
+/* Container that holds the button fixed to the right */
+.side-content-container {
+    position: fixed;
+    right: -5%;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  /* Button styles */
+  .side-btn {
+    padding: 10px 20px;
+    background-color: #174579;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    transform: rotate(-90deg);
+  }
+  
+  .side-btn:hover {
+    background-color: #0056b3;
+  }
+  
+  /* Content that appears when the button is hovered */
+  .hover-content {
+    position: absolute;
+    right: 100%;
+    top: -200px;
+    background-color: white;
+    border: 1px solid #ddd;
+    padding: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 300px;
+    display: none; /* Initially hidden */
+  }
+  
+  /* Show the content when hovering over the container */
+  .side-content-container:hover .hover-content {
+    display: block;
+  }
+.bg-drak-lig {
+    background-color: lightslategrey;
+}  
+
+// .font-size-13 {
+//     font-size: 12px!important;
+//     color: #fff;
+
+// }
